Fix font size of entry list item with rich text paragraphs and tooltip for truncated titles

--- a/src/client/stylesheets/wo.scss
+++ b/src/client/stylesheets/wo.scss
@@ -54,6 +54,13 @@ a {
     font-weight: 300;
 }
 
+.blurb {
+    font-size: 12px;
+    p {
+        font-size: 12px;
+    }
+}
+
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
